Fix map spacing

--- a/pods-maps/components/Maps/ui/css/pods-maps.css
+++ b/pods-maps/components/Maps/ui/css/pods-maps.css
@@ -8,7 +8,12 @@
 }*/
 
 /* Admin */
-.pods-field .pods-maps-map-canvas {
+.pods-field .pods-maps-map-separator,
+.pods-field__container .pods-maps-map-separator {
+	margin: 1em 0;
+}
+.pods-field .pods-maps-map-canvas,
+.pods-field__container .pods-maps-map-canvas {
 	margin-top: 10px;
 	height:     300px;
 	/*width:      95%;*/
